# KanaCrush

./: .gitignore  CMakeCache.txt  CMakeLists.txt  KanaCrush  Makefile  README.md  animation.cpp  cmake_install.cmake  conanfile.txt  lab11mod  lab11mod.cpp  lab11mod.h  main.cpp  main.h  makefile  try.cpp  working  working.cpp  works.cpp
report/: report.tex
src/: CandyCrush.cpp  FL_includes.h  MainWindow.cpp  MainWindow.h  board.cpp  board.h  candy.cpp  candy.h  constants.h  crush.cpp  crush.h  main.cpp  main.h  makefile  observer.cpp  observer.h  parameters.cpp  parameters.h  src.h  srcCommon.h  test.cpp  test.h
src/1model/: MVCinclude.h  Mboard.cpp  Mboard.h  Menu.cpp  Menu.h  Welcome.cpp  Welcome.h
src/1model/board/: Mboard.cpp  Mboard.h
src/1model/board/cell/: Mcell.cpp  Mcell.h
src/1model/board/linked_list/: Linked_list.cpp  Linked_list.h  linked_list.cpp  linked_list.h
src/1model/board/linked_list/node/: Node.cpp  Node.h
src/1model/candy/: candy.cpp  candy.h
src/1model/cell/: Mcell.cpp  Mcell.h
src/1model/game/: game.cpp  game.h
src/1model/game/board/: Mboard.cpp  Mboard.h
src/1model/game/board/cell/: Mcell.cpp  Mcell.h
src/1model/game/board/linked_list/: Linked_list.cpp  Linked_list.h
src/1model/game/board/linked_list/node/: Node.cpp  Node.h
src/2control/: Cboard.cpp  Cboard.h
src/2control/candy/: candy.h
src/2control/cell/: Ccell.cpp  Ccell.h
src/2view/: MVCinclude.h  Vboard.h  animation.cpp  animation.h  canvas.cpp  canvas.h  sketchable.cpp  sketchable.h
src/2view/GUI/: Bounce.cpp  Bounce.h  ClickableCell.cpp  ClickableCell.h  GameWindow.cpp  GameWindow.h  MainWindow.h  MenuWindow.cpp  MenuWindow.h  Rectangle.cpp  Rectangle.h  Vboard.cpp  Vboard.h  WelcomeWindow.cpp  WelcomeWindow.h  Window.cpp  Window.h  anim.cpp  anim.h  animation.cpp  animation.h  canvas.cpp  canvas.h  sketchable.cpp  sketchable.h
src/2view/button/: button.cpp  button.h
src/2view/cell/: Vcell.cpp  Vcell.h
src/3control/: Cboard.cpp  Cboard.h  MVCinclude.h
src/3control/cell/: Ccell.cpp  Ccell.h
src/3view/: Vboard.cpp  Vboard.h
src/3view/cell/: Vcell.cpp  Vcell.h
src/control/cell/: Ccell.cpp
src/model/: common.h
src/model/cell/: Mcell.cpp  cell.h
src/view/cell/: Vcell.cpp
